# DCC

./: LICENSE  README.md
dataset/traffic_generator/: dcc_collector.py  pipinstall.txt
dataset/traffic_generator/httplib2_patch/: __init__.py  patch
dataset/traffic_generator/requests_patch/: adapters.py  patch  sessions.py
experiment_runs/: hpenc  hsmenc  hsmenc_audit  hsmenc_audit_run.sh  log_tamper_attack.sh  ovhds_hpenc_aes256.sh  ovhds_hsmenc_chapoly.sh  reinject_attack.sh
forensicrclone/SEcubeDevBoard/: .cproject  .mxproject  .project  CMakeLists.txt  SEcubeDevBoard.ioc  STM32F429NIHX_FLASH.ld  STM32F429NIHX_RAM.ld
forensicrclone/SEcubeDevBoard/Inc/: adc.h  crc.h  dma.h  fmc.h  gpio.h  i2c.h  mxconstants.h  rng.h  sdio.h  spi.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h  tim.h  usart.h  usb_device.h  (+4 more)
forensicrclone/SEcubeHost/: CMakeLists.txt  frclone.cpp  frclone.h  frclone_testdriver.cpp  secube_testchacha.cpp
forensicrclone/SEcubeHost/sources/L0/: L0.cpp  L0_commodities.cpp
forensicrclone/SEcubeHost/sources/L0/Communication API/: communication_api.h
forensicrclone/SEcubeHost/sources/L0/L0 Base/: L0_base.h
forensicrclone/SEcubeHost/sources/L1/: L1.cpp  L1_enumerations.h  L1_login_logout.cpp
forensicrclone/SEcubeHost/sources/L1/Crypto Libraries/: pbkdf2.c  sha256.c
forensicrclone/SEcubeHost/sources/L1/L1 Base/: L1_base.h
forensicrclone/SEcubeHost/sources/L1/Utility API/: utility_api.h
forensicrclone/SEcubeHost/sources/LH/Commodities API/: commodities_api.h
hsmenc/: CMakeLists.txt  hsmenc.cpp
hsmenc_audit/: CMakeLists.txt  main.cpp
(+73 files in other folders)
